--- a/Styles/style-grammar.css
+++ b/Styles/style-grammar.css
@@ -1,137 +1,158 @@
+body {
+  overflow-x: hidden;
+}
 .modal {
-    width: 300px;
+  width: 300px;
 }
-.modal-content{
-    width: 300px;
+.modal-content {
+  width: 300px;
 }
-.list-group-item:hover{
-    background-color: rgb(13, 155, 148);
-}
-
-.background{
-    background-color: rgb(38, 38, 38);
-  }
-
-.loader{
-    position: fixed;
-    z-index: 99;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color:rgb(38, 38, 38);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.list-group-item:hover {
+  background-color: rgb(13, 155, 148);
 }
 
-.loader > img{
-    width: 150px;
+.background {
+  background-color: rgb(38, 38, 38);
 }
 
-.loader.hidden{
-    animation: fadeOut 2s;
-    animation-fill-mode: forwards;
+.loader {
+  position: fixed;
+  z-index: 99;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(38, 38, 38);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader > img {
+  width: 150px;
+}
+
+.loader.hidden {
+  animation: fadeOut 2s;
+  animation-fill-mode: forwards;
 }
 
 @keyframes fadeOut {
-    100%{
-        opacity: 0;
-        visibility: hidden;
-    }
-
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
-.container-fluid{
-    background-color: white;
+.container-fluid {
+  background-color: white;
 }
 
 .navbar {
-    background-color: white;
+  background-color: white;
 }
 
-.teste{
-    font-size: large;
-    background-color: aqua;
+.teste {
+  font-size: large;
+  background-color: aqua;
 }
 
-.banner{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-    height: 0%;
+.banner {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+  height: 0%;
 }
 
-.nav-item{
-    margin-right: 40%;
-    font-size: large;
+.nav-item {
+  margin-right: 40%;
+  font-size: large;
 }
 
-.navbar-brand{
-    margin-right: -5%;
+.navbar-brand {
+  margin-right: -5%;
 }
 
-.navbar-toggler{
-    margin-left: -15%;
+.navbar-toggler {
+  margin-left: -15%;
 }
 
-.d-flex{
-    margin-left: 0%;
+.d-flex {
+  margin-left: 0%;
 }
 
-.conteudo{
-    margin-left: 2%;
-    margin-right: 2%;
-    background-color: rgb(30, 30, 30);
+.conteudo {
+  margin-left: 2%;
+  margin-right: 2%;
+  background-color: rgb(30, 30, 30);
 }
 
-.texto{
-    font-size: 18px;
-    color: #ffffff;
-    text-align: left;
-    
+.texto {
+  font-size: 18px;
+  color: #ffffff;
+  text-align: left;
 }
 
-.paragrafo{
-    font-size: 31px;
-    color: #ffffff;
-    text-transform: uppercase;
-    text-align: justify;
+.paragrafo {
+  font-size: 31px;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-align: justify;
 }
 
-.linha{
-    color: aqua;
-    width: 100%;
-    margin-top: 6%;
-    
+.linha {
+  color: aqua;
+  width: 100%;
+  margin-top: 6%;
 }
 
-.imagem{
-    float: left;
-    margin-right: 2%;
-    width: 20%;
+.imagem {
+  float: left;
+  margin-right: 2%;
+  width: 20%;
 }
 
-.card{
-    float: left;
-    margin-top: 7%;
-    margin-left: 7%;
-    width: 22%;
-    color: white;
-    background-color: rgb(49, 49, 49);
+.card {
+  width: 350px;
+  color: white;
+  background-color: rgb(49, 49, 49);
+  margin: 10% auto 0 auto;
 }
 
-.grammar{
-    margin-top: 5%;
-    margin-left: 5%;
-    margin-right: 5%;
-
+.grammar {
+  margin-top: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
-.table{
-    color: aqua;
-    margin-left: 10%;
-    width: 60%;
+.table {
+  color: aqua;
+  margin-left: 10%;
+  width: 60%;
 }
 
+.container-footer {
+  width: 100%;
+  height: 80px;
+}
+
+.list-footer-item {
+  text-align: center;
+  width: 100%;
+  margin: 0;
+}
+
+.list-footer-item > p {
+  color: aqua;
+  font-size: 1rem;
+  font-weight: 600;
+  padding-top: 30px;
+}
+
+footer {
+  width: 100%;
+  height: 80px;
+  display: relative;
+  bottom: 0px;
+}
