--- a/Styles/style-index.css
+++ b/Styles/style-index.css
@@ -137,9 +137,9 @@
 }
 
 .list-footer-item > p {
-  color: aqua;
+  color: white;
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: 200;
   padding-top: 30px;
 }
 
