--- a/Styles/style-index.css
+++ b/Styles/style-index.css
@@ -4,12 +4,23 @@
 .modal-content {
   width: 300px;
 }
+
+.list-group-item a {
+  width: 100%;
+  text-align: left;
+}
+
 .list-group-item:hover {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(13, 155, 148);
 }
 
 .background {
   background-color: rgb(38, 38, 38);
+}
+
+.container-fluid {
+  background-color: white;
+  align-items: center !important;
 }
 
 .loader {
@@ -41,17 +52,9 @@
   }
 }
 
-.container-fluid {
-  background-color: white;
-}
-
 .container-set {
   background-color: rgb(241, 241, 241);
   width: 100vw !important;
-}
-
-.navbar {
-  background-color: white;
 }
 
 .teste {
@@ -148,4 +151,85 @@ footer {
   height: 80px;
   display: relative;
   bottom: 0px;
+}
+
+/* teste*/
+
+nav > .container-fluid {
+  justify-content: space-around !important;
+}
+
+nav > .container-fluid ul {
+  margin: 0;
+  padding: 0;
+}
+
+.pai-nav-flex {
+  display: flex;
+  list-style: none;
+  align-items: center;
+  align-content: center;
+  justify-content: space-around;
+}
+
+.filho-nav-flex {
+  padding: 2%;
+}
+
+.filho-nav-flex > input {
+  width: 200px;
+}
+
+.filho-hover:hover,
+.filho-hover a:hover {
+  transition: 0.1s;
+  color: #198754;
+}
+
+.filho-nav-flex a {
+  text-decoration: none;
+  color: black;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.pai-nav-flex li:nth-child(5) {
+  padding-right: 10px;
+}
+
+.pai-nav-flex li:nth-child(6) {
+  padding-left: 0;
+}
+
+@media (max-width: 1034px) {
+  .filho-hover {
+    display: none;
+  }
+
+  .pai-nav-flex {
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (max-width: 750px) {
+  .filho-hover {
+    display: none;
+  }
+
+  .pai-nav-flex {
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+
+  header .container-fluid li {
+    transform: scale(0.9);
+    padding: 25px;
+  }
+
+  .filho-nav-flex > input,
+  .filho-nav-flex > button {
+    display: none;
+  }
 }
