--- a/Styles/style-signup.css
+++ b/Styles/style-signup.css
@@ -8,8 +8,9 @@
   height: 100%;
   background-color: white;
   margin: 5% auto;
-  padding: 0;
+  padding: 10px;
   box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.8);
+  box-sizing: border-box;
 }
 
 .container-cadastro h1 {
@@ -45,8 +46,8 @@
   outline: none;
 }
 
-.form-checkbox label {
-  width: 100%;
+.container-form input:focus {
+  border-bottom: solid 2px #198754;
 }
 
 .container-btn {
@@ -63,6 +64,13 @@
   padding: 15px;
   color: #198754;
   border-radius: 500px;
+  margin-bottom: 10px;
+}
+
+.container-btn button:hover {
+  transition: 0.2s;
+  background-color: #198754;
+  color: white;
 }
 
 @media (max-width: 500px) {
