--- a/Styles/style-signup.css
+++ b/Styles/style-signup.css
@@ -4,7 +4,7 @@
 }
 
 .container-cadastro {
-  width: 500px;
+  width: 700px;
   height: 100%;
   background-color: white;
   margin: 5% auto;
@@ -17,18 +17,13 @@
   text-align: center;
 }
 
-.item-form {
-  padding: 10px;
-}
-
 .container-form {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 0 auto;
   list-style: none;
-  justify-content: center;
-  padding: 0;
-  align-items: center;
-  text-align: center;
+  align-items: flex-start;
+  justify-content: space-around;
 }
 
 .container-form li {
@@ -40,7 +35,7 @@
 .container-form input {
   padding: 10px;
   margin: 0 10px;
-  width: 200px;
+  width: 85%;
   border: none;
   border-bottom: solid 1px black;
   outline: none;
@@ -50,9 +45,47 @@
   border-bottom: solid 2px #198754;
 }
 
+.item-form {
+  width: 45%;
+  padding: 10px 0;
+}
+
+.item-form textarea {
+  resize: none;
+  box-shadow: 2px 2px 1px rgba(0, 0, 0);
+  border: solid 1px rgb(145, 145, 145);
+  width: 90%;
+  margin-top: 5px;
+}
+
+.item-form > select {
+  text-decoration: none;
+  outline: none;
+  border: solid 1px #8d8d8d;
+  background-color: rgb(245, 245, 245);
+  width: 90%;
+  padding: 4px;
+  border-radius: 10px;
+  color: #020202;
+}
+
+.item-form > select:hover {
+  cursor: pointer;
+}
+
+.switch-sex input {
+  width: 15px;
+  margin: 0 3px;
+}
+
+.switch-sex input:hover,
+.switch-sex label:hover {
+  cursor: pointer;
+}
+
 .container-btn {
-  width: 220px;
   display: inline-block;
+  width: 100%;
 }
 
 .container-btn button {
@@ -60,11 +93,11 @@
   outline: none;
   border: solid 1px #198754;
   background-color: white;
-  width: 150px;
+  width: 60%;
   padding: 15px;
   color: #198754;
   border-radius: 500px;
-  margin-bottom: 10px;
+  margin: 10px 0 15px 20%;
 }
 
 .container-btn button:hover {
@@ -78,18 +111,28 @@
     width: 370px;
   }
 
+  .item-form {
+    width: 90%;
+    padding: 10px 0;
+  }
+
   .container-form input {
-    width: 120px;
+    width: 90%;
   }
 
   .container-btn {
-    width: 135px;
+    width: 90%;
     display: inline-block;
-    margin-left: 10px;
   }
 
   .container-btn button {
-    width: 80px;
+    width: 100%;
     padding: 10px;
+    margin: 10px auto;
+  }
+
+  .switch-sex input {
+    width: 15px;
+    margin: 0 3px;
   }
 }
